--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
         "name": "native-netflix",
         "slug": "native-netflix",
         "version": "1.0.0",
-        "orientation": "portrait",
+        "orientation": "default",
         "icon": "./assets/images/icon.png",
         "scheme": "myapp",
         "userInterfaceStyle": "dark",
