--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "5.11.2",
+    "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "~5.12.8",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
+    "expo-av": "^9.0.0",
     "expo-constants": "~9.3.0",
     "expo-font": "~8.4.0",
     "expo-linking": "~2.0.0",
@@ -32,12 +34,11 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-shared-element": "^0.7.0",
     "react-native-web": "~0.13.12",
     "react-navigation-shared-element": "^5.0.0-alpha1",
-    "rn-placeholder": "^3.0.3",
-    "@react-navigation/native": "^5.9.4",
-    "react-native-screens": "~2.15.2"  
+    "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
