--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
-    "expo-av": "^9.0.0",
+    "expo-av": "~8.7.0",
     "expo-constants": "~9.3.0",
     "expo-font": "~8.4.0",
     "expo-linking": "~2.0.0",
@@ -31,12 +31,14 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-shared-element": "^0.7.0",
     "react-native-web": "~0.13.12",
+    "react-native-youtube": "^2.0.1",
     "react-navigation-shared-element": "^5.0.0-alpha1",
     "rn-placeholder": "^3.0.3"
   },
